Fix reaction list overflow

--- a/src/components/message-pane/message-log-area/styles.module.scss
+++ b/src/components/message-pane/message-log-area/styles.module.scss
@@ -55,8 +55,15 @@
 
 
 
-
+.viewReactionsModal {
+  display: flex;
+  flex-direction: column;
+}
 .viewReactionsContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: auto;
   .reactionTabs {
     display: flex;
     flex-wrap: wrap;
@@ -94,6 +101,7 @@
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 8px;
     padding: 4px;
+
   }
 
   .reactedUsers {
@@ -114,6 +122,7 @@
       .reactedAt {
         font-size: 12px;
         color: rgba(255, 255, 255, 0.6);
+        margin-left: 8px;
       }
       &:hover {
         background-color: rgba(255, 255, 255, 0.1);
